fix: rewrite DashboardService - new users get zero data, fix compilation errors