@@ -7,8 +7,10 @@ import com.mimo.mapper.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
+import java.time.temporal.TemporalAdjusters;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -24,21 +26,19 @@ public class DashboardService {
     private final TeamMapper teamMapper;
 
     public DashboardVO getDashboard(Long userId) {
-        // 获取用户参与的所有项目ID
         List<Long> projectIds = projectMemberMapper.selectList(
                 new LambdaQueryWrapper<ProjectMember>().eq(ProjectMember::getUserId, userId))
                 .stream().map(ProjectMember::getProjectId).collect(Collectors.toList());
 
-        // 新用户未加入任何项目，返回空数据
+        // New user with no projects -> return all zeros
         if (projectIds.isEmpty()) {
             return DashboardVO.builder()
                     .totalIssues(0).inProgressIssues(0).doneIssues(0)
                     .bugCount(0).thisWeekActivity(0)
-                    .activeSprints(List.of()).myProjects(List.of())
-                    .recentActivities(List.of()).build();
+                    .activeSprints(Collections.emptyList()).myProjects(Collections.emptyList())
+                    .recentActivities(Collections.emptyList()).build();
         }
 
-        // 我的任务统计
         LambdaQueryWrapper<Issue> issueQw = new LambdaQueryWrapper<Issue>()
                 .in(Issue::getProjectId, projectIds);
         int totalIssues = issueMapper.selectCount(issueQw).intValue();
@@ -47,18 +47,16 @@ public class DashboardService {
         int doneIssues = issueMapper.selectCount(
                 issueQw.clone().eq(Issue::getStatus, "DONE")).intValue();
 
-        // BUG 缺陷数
         int bugCount = issueMapper.selectCount(
                 issueQw.clone().eq(Issue::getType, "BUG")).intValue();
 
-        // 本周活跃（周一到今天的动态数）
-        LocalDate monday = LocalDate.now().with(java.time.temporal.TemporalAdjusters.previousOrSame(java.time.DayOfWeek.MONDAY));
+        LocalDate monday = LocalDate.now().with(TemporalAdjusters.previousOrSame(DayOfWeek.MONDAY));
         int thisWeekActivity = activityLogMapper.selectCount(
                 new LambdaQueryWrapper<ActivityLog>()
                         .in(ActivityLog::getProjectId, projectIds)
                         .ge(ActivityLog::getCreatedAt, monday.atStartOfDay())).intValue();
 
-        // 活跃 Sprint
+        // Active Sprints
         List<Sprint> sprints = sprintMapper.selectList(
                 new LambdaQueryWrapper<Sprint>()
                         .in(Sprint::getProjectId, projectIds)
@@ -69,32 +67,31 @@ public class DashboardService {
                         .collect(Collectors.toMap(Project::getId, p -> p));
         Map<Long, Long> sprintTotalMap = new HashMap<>();
         Map<Long, Long> sprintDoneMap = new HashMap<>();
-        if (!sprints.isEmpty()) {
-            for (Sprint s : sprints) {
-                long total = issueMapper.selectCount(
-                        new LambdaQueryWrapper<Issue>().eq(Issue::getSprintId, s.getId()));
-                long done = issueMapper.selectCount(
-                        new LambdaQueryWrapper<Issue>().eq(Issue::getSprintId, s.getId())
-                                .eq(Issue::getStatus, "DONE"));
-                sprintTotalMap.put(s.getId(), total);
-                sprintDoneMap.put(s.getId(), done);
-            }
+        for (Sprint s : sprints) {
+            long total = issueMapper.selectCount(
+                    new LambdaQueryWrapper<Issue>().eq(Issue::getSprintId, s.getId()));
+            long done = issueMapper.selectCount(
+                    new LambdaQueryWrapper<Issue>().eq(Issue::getSprintId, s.getId())
+                            .eq(Issue::getStatus, "DONE"));
+            sprintTotalMap.put(s.getId(), total);
+            sprintDoneMap.put(s.getId(), done);
         }
         final Map<Long, Project> pm = projectMap;
-        List<SprintInfo> activeSprints = sprints.stream().map(s -> {
+        List<SprintInfo> activeSprints = new ArrayList<>();
+        for (Sprint s : sprints) {
             Project p = pm.get(s.getProjectId());
-            return SprintInfo.builder()
-                    .id(s.getId()).name(s.name())
+            activeSprints.add(SprintInfo.builder()
+                    .id(s.getId()).name(s.getName())
                     .projectId(s.getProjectId())
                     .projectName(p != null ? p.getName() : "")
                     .startDate(s.getStartDate().toString())
                     .endDate(s.getEndDate().toString())
                     .totalIssues(sprintTotalMap.getOrDefault(s.getId(), 0L).intValue())
                     .completedIssues(sprintDoneMap.getOrDefault(s.getId(), 0L).intValue())
-                    .build();
-        }).collect(Collectors.toList());
+                    .build());
+        }
 
-        // 我的项目
+        // My Projects
         List<Project> projects = projectMapper.selectBatchIds(projectIds);
         Set<Long> teamIds = projects.stream().map(Project::getTeamId)
                 .filter(Objects::nonNull).collect(Collectors.toSet());
@@ -102,28 +99,32 @@ public class DashboardService {
                 teamMapper.selectBatchIds(teamIds).stream()
                         .collect(Collectors.toMap(Team::getId, t -> t));
         final Map<Long, Team> tm = teamMap;
-        List<ProjectInfo> myProjects = projects.stream().map(p -> {
+        List<ProjectInfo> myProjects = new ArrayList<>();
+        for (Project p : projects) {
             Team t = tm.get(p.getTeamId());
-            return ProjectInfo.builder()
+            myProjects.add(ProjectInfo.builder()
                     .id(p.getId()).name(p.getName()).key(p.getKey())
                     .template(p.getTemplate())
                     .teamName(t != null ? t.getName() : "")
-                    .build();
-        }).collect(Collectors.toList());
+                    .build());
+        }
 
-        // 近期动态
+        // Recent Activities
         List<ActivityLog> logs = activityLogMapper.selectList(
                 new LambdaQueryWrapper<ActivityLog>()
                         .in(ActivityLog::getProjectId, projectIds)
                         .orderByDesc(ActivityLog::getCreatedAt)
                         .last("LIMIT 10"));
         DateTimeFormatter fmt = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
-        List<ActivityInfo> recentActivities = logs.stream().map(l -> ActivityInfo.builder()
-                .id(l.getId()).username(l.getUsername())
-                .targetType(l.getTargetType()).action(l.getAction())
-                .detail(l.getDetail())
-                .createdAt(l.getCreatedAt() != null ? l.getCreatedAt().format(fmt) : "")
-                .build()).collect(Collectors.toList());
+        List<ActivityInfo> recentActivities = new ArrayList<>();
+        for (ActivityLog l : logs) {
+            recentActivities.add(ActivityInfo.builder()
+                    .id(l.getId()).username(l.getUsername())
+                    .targetType(l.getTargetType()).action(l.getAction())
+                    .detail(l.getDetail())
+                    .createdAt(l.getCreatedAt() != null ? l.getCreatedAt().format(fmt) : "")
+                    .build());
+        }
 
         return DashboardVO.builder()
                 .totalIssues(totalIssues)
